# tig

./: .gitignore  Cargo.toml  README.adoc
.github/workflows/: rust.yml
contrib/: tig-completion.zsh
rust/: CONTRIBUTING.md  FEATURES.md  README.md  ROADMAP.md  TODO.md
rust/crates/tigrs-cli/: Cargo.toml
rust/crates/tigrs-cli/src/: lib.rs  main.rs
rust/crates/tigrs-core/: Cargo.toml
rust/crates/tigrs-core/src/: lib.rs
rust/crates/tigrs-git/: Cargo.toml
rust/crates/tigrs-git/src/: lib.rs
rust/crates/tigrs-tui/: Cargo.toml
rust/crates/tigrs-tui/src/: lib.rs
src/: main.rs
